<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/allUsersActivity"
            android:icon="@drawable/account"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/allEventActivity"
            android:icon="@drawable/article"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/invoiceHistoryActivity"
            android:icon="@drawable/beenhere"
            android:title="@string/menu_ticket" />
        <item
            android:id="@+id/eventAddActivity"
            android:icon="@drawable/add_to_photos"
            android:title="@string/add_new_event" />

    </group>
</menu>