<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAddActivity">


    <TextView
        android:id="@+id/textView48"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:gravity="center"
        android:text="@string/create_new_event"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/textView48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_img_view" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/event_details"
        app:layout_constraintStart_toStartOf="@+id/divider8"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <EditText
        android:id="@+id/add_event_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:state_enabled="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/add_event_mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <EditText
        android:id="@+id/add_event_price"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="10"
        android:hint="@string/event_price"
        android:inputType="time"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:state_enabled="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/time_bottom_sheet_button"
        app:layout_constraintStart_toStartOf="@+id/add_event_time"
        app:layout_constraintTop_toBottomOf="@+id/add_event_time" />

    <EditText
        android:id="@+id/add_event_time"
        android:layout_width="148dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="10"
        android:hint="@string/event_time"
        android:inputType="time"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:state_enabled="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/add_organizer_name"
        app:layout_constraintTop_toBottomOf="@+id/add_organizer_name" />

    <ImageButton
        android:id="@+id/time_bottom_sheet_button"
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#FCF5FD"
        android:tint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="@+id/add_event_time"
        app:layout_constraintStart_toEndOf="@+id/add_event_time"
        app:layout_constraintTop_toTopOf="@+id/add_event_time"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_access_time" />

    <EditText
        android:id="@+id/add_event_date"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="10"
        android:hint="@string/event_date"
        android:inputType="date"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:state_enabled="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/time_bottom_sheet_button"
        app:layout_constraintEnd_toStartOf="@+id/date_add_bottom_sheet_button"
        app:layout_constraintStart_toEndOf="@+id/time_bottom_sheet_button"
        app:layout_constraintTop_toTopOf="@+id/time_bottom_sheet_button" />

    <ImageButton
        android:id="@+id/date_add_bottom_sheet_button"
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:backgroundTint="#FCF5FD"
        android:tint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="@+id/add_event_date"
        app:layout_constraintEnd_toEndOf="@+id/add_organizer_name"
        app:layout_constraintTop_toTopOf="@+id/add_event_date"
        app:srcCompat="@drawable/baseline_calendar" />

    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        app:layout_constraintBottom_toBottomOf="@+id/event_category_item"
        app:layout_constraintEnd_toEndOf="@+id/add_event_qty"
        app:layout_constraintStart_toStartOf="@+id/add_event_qty"
        app:layout_constraintTop_toTopOf="@+id/event_category_item" />

    <Spinner
        android:id="@+id/event_category_item"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        app:layout_constraintEnd_toEndOf="@+id/add_event_price"
        app:layout_constraintStart_toStartOf="@+id/add_event_price"
        app:layout_constraintTop_toBottomOf="@+id/add_event_price" />

    <EditText
        android:id="@+id/add_event_description"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="80"
        android:gravity="top"
        android:hint="@string/event_description"
        android:inputType="textMultiLine"
        android:lines="50"
        android:maxLines="50"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:singleLine="false"
        android:state_enabled="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/event_category_item"
        app:layout_constraintTop_toBottomOf="@+id/event_category_item" />

    <Button
        android:id="@+id/event_add_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/publish_event"
        app:layout_constraintEnd_toEndOf="@+id/add_event_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/add_event_description"
        app:layout_constraintTop_toBottomOf="@+id/add_event_description" />


    <EditText
        android:id="@+id/add_event_qty"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="time"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:state_enabled="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_event_price"
        app:layout_constraintEnd_toEndOf="@+id/date_add_bottom_sheet_button"
        app:layout_constraintStart_toStartOf="@+id/add_event_date"
        app:layout_constraintTop_toTopOf="@+id/add_event_price" />

    <ImageView
        android:id="@+id/event_img_view"
        android:layout_width="190dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:srcCompat="@drawable/add_photo_alternate" />

    <EditText
        android:id="@+id/add_event_mobile_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:state_enabled="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_event_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/add_organizer_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custome_input"
        android:backgroundTint="@color/back_button"
        android:ems="10"
        android:hint="@string/organizer_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:state_enabled="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/add_event_mobile_number"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="@+id/add_event_name"
        app:layout_constraintTop_toBottomOf="@+id/add_event_name" />


</androidx.constraintlayout.widget.ConstraintLayout>